--- a/rolli-shop-start-project/index.html
+++ b/rolli-shop-start-project/index.html
@@ -156,36 +156,7 @@
 						<!-- cart-wrapper -->
 						<div class="cart-wrapper">
 
-							<!-- Cart item -->
-							<div class="cart-item" data-id="02">
-								<div class="cart-item__top">
-									<div class="cart-item__img">
-										<img src="img/roll/california-tempura.jpg" alt="">
-									</div>
-									<div class="cart-item__desc">
-										<div class="cart-item__title">Калифорния темпура</div>
-										<div class="cart-item__weight">6 шт. / 205г.</div>
-
-										<!-- cart-item__details -->
-										<div class="cart-item__details">
-
-											<div class="items items--small counter-wrapper">
-												<div class="items__control" data-action="minus">-</div>
-												<div class="items__current" data-counter="">1</div>
-												<div class="items__control" data-action="plus">+</div>
-											</div>
-
-											<div class="price">
-												<div class="price__currency">250 ₽</div>
-											</div>
-
-										</div>
-										<!-- // cart-item__details -->
-
-									</div>
-								</div>
-							</div>
-							<!-- // Cart item -->
+							
 
 						</div>
 						<!-- // cart-wrapper -->
@@ -193,14 +164,14 @@
 						<!-- Стоимость заказа -->
 						<div class="cart-total">
 							<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
-							<p><span class="h5">Итого:</span> <span class="total-price">330</span> <span class="rouble">₽</span></p>
+							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
 						</div>
 						<!-- // Стоимость заказа -->
 
 					</div>
 
 					<!-- Оформить заказ -->
-					<div id="order-form" class="card-body border-top">
+					<div id="order-form" class="card-body border-top none">
 						<h5 class="card-title">Оформить заказ</h4>
 						<form>
 							<div class="form-group">
@@ -221,6 +192,8 @@
 
 	<!-- Подключаем скрипты -->
 
+	<script src="./js/calcCartPrice.js"></script>
+	<script src="./js/toggleCartStatus.js "></script>
 	<script src="./js/counter_02.js"></script>
 	<script src="./js/cart_02.js"></script>
 </body>
