--- a/rolli-shop-start-project/index.html
+++ b/rolli-shop-start-project/index.html
@@ -163,7 +163,11 @@
 
 						<!-- Стоимость заказа -->
 						<div class="cart-total">
-							<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
+							<p data-cart-delivery class="none">
+								<span class="h5">Доставка:</span> 
+								<span class="delivery-cost">250 ₽</span> <br>
+								<span class="small">Бесплатно при убийстве Путина</span>
+							</p>
 							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
 						</div>
 						<!-- // Стоимость заказа -->
