--- a/rolli-shop-start-project/index.html
+++ b/rolli-shop-start-project/index.html
@@ -16,8 +16,8 @@
 	<header class="header">
 		<div class="container text-center">
 			<img src="img/logo/logo.svg" width="92" alt="Суши и пицца">
-			<div class="display-4">Доставка роллов</div>
-			<p class="lead">Оперативно и вкусно</p>
+			<div class="display-4">Доставка ролів</div>
+			<p class="lead">Швидко та смачно</p>
 		</div>
 	</header>
 
@@ -43,7 +43,7 @@
 
 									<div class="price">
 										<div class="price__weight">180г.</div>
-										<div class="price__currency">300 ₽</div>
+										<div class="price__currency">300 грн</div>
 									</div>
 								</div>
 
@@ -71,7 +71,7 @@
 
 									<div class="price">
 										<div class="price__weight">205г.</div>
-										<div class="price__currency">250 ₽</div>
+										<div class="price__currency">250 грн</div>
 									</div>
 								</div>
 
@@ -99,7 +99,7 @@
 
 									<div class="price">
 										<div class="price__weight">182г.</div>
-										<div class="price__currency">230 ₽</div>
+										<div class="price__currency">230 грн</div>
 									</div>
 
 								</div>
@@ -128,7 +128,7 @@
 
 									<div class="price">
 										<div class="price__weight">230г.</div>
-										<div class="price__currency">320 ₽</div>
+										<div class="price__currency">320 грн</div>
 									</div>
 
 								</div>
@@ -165,10 +165,10 @@
 						<div class="cart-total">
 							<p data-cart-delivery class="none">
 								<span class="h5">Доставка:</span> 
-								<span class="delivery-cost">250 ₽</span> <br>
+								<span class="delivery-cost">250 грн</span> <br>
 								<span class="small">Бесплатно при убийстве Путина</span>
 							</p>
-							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
+							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">грн</span></p>
 						</div>
 						<!-- // Стоимость заказа -->
 
